#93450: Rework saving creatives
